name:                Epsilon
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/Epsilon#readme
license:             BSD3
license-file:        LICENSE
author:              daisuke
maintainer:          example@example.com
copyright:           2016 Author name here
category:            micro Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     EpsilonParser
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , mtl
  default-language:    Haskell2010

executable Epsilon
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , parsec
                     , mtl
                     , time
                     , Epsilon
  default-language:    Haskell2010

test-suite Epsilon-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Epsilon
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Epsilon
